@@ -1,9 +1,9 @@
 Package: copas
 Title: Statistical methods to model and adjust for bias in meta-analysis
-Version: 0.6-2
+Version: 0.6-3
 Author: James Carpenter <James.Carpenter@lshtm.ac.uk>, Guido Schwarzer <sc@imbi.uni-freiburg.de>
 Maintainer: Guido Schwarzer <sc@imbi.uni-freiburg.de>
 Depends: meta (>= 0.8)
-Date: 2009-04-08
+Date: 2009-11-26
 Description: Copas selection model.
 License: GPL (>= 2)
