@@ -14,7 +14,7 @@ plot.copas(x,
                      "P-value for residual selection bias"),
            xlim.pp=NULL, level=0.95,
            orthogonal.line=TRUE, lines=FALSE,
-           warn=-1, ...)
+           sign.rsb=0.1, warn=-1, ...)
 }
 \arguments{
   \item{x}{An object of class \code{copas}, generated by the \code{copas} function}
@@ -42,6 +42,8 @@ plot.copas(x,
     line. Regression lines with a positive adjusted \code{R^2} will be
     printed in green color, others will be printed in red color.
   }
+  \item{sign.rsb}{The significance level for the test of residual
+    selection bias (between 0 and 1).}
   \item{warn}{A number setting the handling of warning messages. It is
     not uncommon for numerical problems to be encountered during
     estimation over the grid of (gamma0, gamma1) values. Usually this
