@@ -1,11 +1,12 @@
 
 2009-11-25, version 0.6-3
 
-Functions summary.copas and plot.copas:
+Functions plot.copas, print.copas, print.summary.copas,
+	  summary.copas:
  - modified so that the signifiance level for the test of
    residual selection bias can be chosen by the user
    (new argument sign.rsb)
- - help file changed accordingly
+ - help files changed accordingly
 
 
 2009-04-08, version 0.6-2
